; ModuleID = '/home/carl/AnghaBench/mpv/filters/extr_f_auto_filters.c_deint_destroy.c'
source_filename = "/home/carl/AnghaBench/mpv/filters/extr_f_auto_filters.c_deint_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_filter = type { %struct.deint_priv* }
%struct.deint_priv = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mp_filter*)* @deint_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @deint_destroy(%struct.mp_filter* %0) #0 {
  %2 = alloca %struct.mp_filter*, align 8
  %3 = alloca %struct.deint_priv*, align 8
  store %struct.mp_filter* %0, %struct.mp_filter** %2, align 8
  %4 = load %struct.mp_filter*, %struct.mp_filter** %2, align 8
  %5 = getelementptr inbounds %struct.mp_filter, %struct.mp_filter* %4, i32 0, i32 0
  %6 = load %struct.deint_priv*, %struct.deint_priv** %5, align 8
  store %struct.deint_priv* %6, %struct.deint_priv** %3, align 8
  %7 = load %struct.deint_priv*, %struct.deint_priv** %3, align 8
  %8 = getelementptr inbounds %struct.deint_priv, %struct.deint_priv* %7, i32 0, i32 0
  %9 = call i32 @mp_subfilter_reset(%struct.TYPE_2__* %8)
  %10 = load %struct.deint_priv*, %struct.deint_priv** %3, align 8
  %11 = getelementptr inbounds %struct.deint_priv, %struct.deint_priv* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = call i32 @TA_FREEP(i32* %12)
  ret void
}

declare dso_local i32 @mp_subfilter_reset(%struct.TYPE_2__*) #1

declare dso_local i32 @TA_FREEP(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
